<resources>
    <string name="app_name">Universal Beats</string>
    <string name="title_home">Home</string>
    <string name="title_beats">Beats</string>
    <string name="title_startselling">Start Selling</string>
    <string name="latest_beats">Latest beats</string>
    <string name="newest_producers">Newest producers</string>
    <string name="title_login">Login</string>
    <string name="base_url">https://fierce-mesa-02091.herokuapp.com/</string>
    <string name="upload_your_beat_to_make_money">Upload your beat to make money</string>
    <string name="beat_cover">Beat cover</string>
    <string name="beat_name">Beat name</string>
    <string name="genre">Genre</string>
    <string name="tag">Tag</string>
    <string name="bpm">BPM</string>
    <string name="mood">Mood</string>
    <string name="price">Price (€)</string>
    <string name="upload_beat_file">Upload beat file</string>
    <string name="upload">Upload</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="no_account">No account?</string>
    <string name="full_name">Full name</string>
    <string name="e_mail">E-mail</string>
    <string name="confirm_password">Confirm password</string>
    <string name="about_me">About me</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">YouTube</string>
    <string name="do_you_already_have_an_account">Do you already have an account?</string>
    <string name="cart">Cart</string>
    <string name="cart_info">Your cart is empty</string>
    <string name="insights">Insights</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_avatar">Change avatar</string>
    <string name="avatar">Avatar</string>
    <string name="change_background">Change background</string>
    <string name="background">Background</string>
    <string name="name">Name</string>
    <string name="instagram">Instagram</string>
    <string name="save">Save</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="sold_beats">Sold beats</string>
    <string name="sold_beats_info">All payments will show up on your bank account as soon as possible!</string>
    <string name="hashtag">#</string>
    <string name="buy">Buy €</string>
    <string name="euro">€</string>
    <string name="by">by</string>
    <string name="skip_next_desc">Skip to next song</string>
    <string name="play_desc">Play a beat</string>
    <string name="skip_prev_desc">Skip to previous song</string>
    <string name="beat_image_desc">Cover of beat</string>
    <string name="upload_cover">Upload cover</string>
    <string name="beat_file_not_detected">No beat file detected.</string>
    <string name="profile">Profile</string>
    <string name="this_is_your_profile">This is your profile</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="your_beat">Your beat "</string>
    <string name="has_been_sold">" has been sold</string>
    <string name="upload_avatar">Upload avatar</string>
    <string name="plays">plays</string>
</resources>